Tried fixing sticky menu on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,9 @@ body {
   font-family: 'Montserrat', sans-serif; }
 
 #navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 999999999;
   display: flex;
   flex-direction: column; }
   #navbar .primary-nav {
@@ -140,6 +143,9 @@ body {
   position: fixed;
   width: 100%;
   z-index: 999999999; }
+  @media (max-width: 576px) {
+    .sticky {
+      transform: translate3d(0, 0, 0, 0); } }
 
 .show {
   display: block; }
