--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -5,7 +5,9 @@
 }
 
 #navbar {
-
+    position: fixed;
+    width: 100%;
+    z-index: 999999999;
     display: flex;
     flex-direction: column;
 
@@ -76,6 +78,8 @@
         }
 
         
+
+        
     }
     
     .secondary-nav {
@@ -100,6 +104,7 @@
                }
            }
        }
+
     }
 
    
@@ -112,6 +117,11 @@
     position: fixed;
     width: 100%;
     z-index: 999999999;
+
+    @include sm{
+        transform: translate3d(0, 0, 0 ,0);
+    }
+    
 }
 
 .show {
